--- a/5_Programmation/Version_01/templates/settings.html
+++ b/5_Programmation/Version_01/templates/settings.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
 
     <meta name="author" content="Robin Forestier">
-    <meta name="description" content="Error page">
+    <meta name="description" content="Settings page">
 
     <title>Settings</title>
 
-    <link rel="stylesheet" href="./static/layout.css">
+    <link rel="stylesheet" href="/css">
 </head>
 <body>
     <header>
